Fix spacing for admin-only command icon

--- a/themes/helix/assets/sass/style.scss
+++ b/themes/helix/assets/sass/style.scss
@@ -387,6 +387,7 @@ main {
 							display: inline-block;
 							height: $font-normal;
 							width: $font-normal;
+							margin-right: 4px;
 
 							&.admin {
 								background-image: url(/img/lock.svg);
